--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@tanstack/react-query": "^5.17.19",
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "localforage": "^1.10.0",
