--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.5"
   },
