--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.17.19",
     "aos": "^2.3.4",
     "axios": "^1.6.5",
+    "firebase": "^10.7.2",
     "localforage": "^1.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
