--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
