--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
