--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@smastrom/react-rating": "^1.4.0",
     "@tanstack/react-query": "^5.17.19",
     "aos": "^2.3.4",
     "axios": "^1.6.5",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-rating": "^2.0.5",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.4",
