--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@reduxjs/toolkit": "^2.1.0",
     "@smastrom/react-rating": "^1.4.0",
     "@tanstack/react-query": "^5.17.19",
     "aos": "^2.3.4",
@@ -24,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
