--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "firebase": "^10.7.2",
+    "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "react-dom": "^18.2.0",
