--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anatoliygatt/heart-switch": "^1.0.13",
     "@emailjs/browser": "^3.12.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.1.0",
     "@smastrom/react-rating": "^1.4.0",
     "@tanstack/react-query": "^5.17.19",
