--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.1.0",
     "@smastrom/react-rating": "^1.4.0",
     "@tanstack/react-query": "^5.17.19",
