--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
