--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scroll-trigger": "^0.6.14",
     "react-toastify": "^10.0.4",
     "recharts": "^2.12.0",
+    "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5"
