--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scroll-trigger": "^0.6.14",
+    "react-tag-input": "^6.9.0",
     "react-toastify": "^10.0.4",
     "recharts": "^2.12.0",
     "socket.io-client": "^4.7.4",
