--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-chatbot-kit": "^2.2.2",
     "react-countup": "^6.5.0",
